--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -30,6 +31,8 @@
             android:name=".ui.main.MainActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".ui.main.ProfileActivity" />
+        <activity android:name=".ui.settings.ProfileSettingsActivity" />
     </application>
 
 </manifest>
