Layout таблицы лидеров (работа с txt)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,11 @@
             android:name=".ui.main.MainActivity"
             android:exported="false">
         </activity>
+
         <activity android:name=".ui.main.ProfileActivity" />
         <activity android:name=".ui.settings.ProfileSettingsActivity" />
+        <activity android:name=".leaderboard.LeaderboardActivity" />
+
     </application>
 
 </manifest>
