Реализация регистрации на МП
1. Реализовано создание групп вместе с приглашениями в неё
2. Реализована регистрация на мероприятие

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity android:name=".Group.CreateGroupActivity"/>
         <activity android:name=".Group.GroupActivity"/>
         <activity android:name=".Riddle.RiddleActivity"/>
+        <activity android:name=".ui.main.EventDetailsActivity" />
+
 
     </application>
 
