Доработка функционалов после слияния
1. Восстановлен функционал кнопки для окончания мероприятий.
2. Исправлено отображение фона организатора в Загадках
3. Добавлен предпросмотр для организатора при создании мероприятия
4. Доработка оформления

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <activity android:name=".ui.main.MapPickerActivity" />
         <activity android:name=".ui.main.EventPreviewActivity" />
         <activity android:name=".leaderboard.TeamLeaderboardActivity" />
+        <activity android:name=".ui.main.RiddlePreviewActivity" />
 
     </application>
 
